Change canonical domain

--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
 <title>About</title>
 <meta name="title" content="About">
 <meta name="description" content="Baseband and Android security research blog.">
-<meta name="og:url" content="https://themmokhtar.github.io/about/">
+<meta name="og:url" content="https://themmokhtar.com/about/">
 <meta name="og:title" content="About">
 <meta name="og:description" content="Baseband and Android security research blog.">
 
@@ -40,14 +40,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Baseband and Android security research blog." />
 <meta property="og:description" content="Baseband and Android security research blog." />
-<link rel="canonical" href="https://themmokhtar.github.io/about/" />
-<meta property="og:url" content="https://themmokhtar.github.io/about/" />
+<link rel="canonical" href="https://themmokhtar.com/about/" />
+<meta property="og:url" content="https://themmokhtar.com/about/" />
 <meta property="og:site_name" content="themmokhtar" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="About" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Baseband and Android security research blog.","headline":"About","name":"themmokhtar","url":"https://themmokhtar.github.io/about/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"Baseband and Android security research blog.","headline":"About","name":"themmokhtar","url":"https://themmokhtar.com/about/"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
