--- a/series.html
+++ b/series.html
@@ -10,7 +10,7 @@
 <title>themmokhtar</title>
 <meta name="title" content="themmokhtar">
 <meta name="description" content="Baseband and Android security research blog.">
-<meta name="og:url" content="https://themmokhtar.github.io/series.html">
+<meta name="og:url" content="https://themmokhtar.com/series.html">
 <meta name="og:title" content="themmokhtar">
 <meta name="og:description" content="Baseband and Android security research blog.">
 
@@ -40,14 +40,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Baseband and Android security research blog." />
 <meta property="og:description" content="Baseband and Android security research blog." />
-<link rel="canonical" href="https://themmokhtar.github.io/series.html" />
-<meta property="og:url" content="https://themmokhtar.github.io/series.html" />
+<link rel="canonical" href="https://themmokhtar.com/series.html" />
+<meta property="og:url" content="https://themmokhtar.com/series.html" />
 <meta property="og:site_name" content="themmokhtar" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="themmokhtar" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"Baseband and Android security research blog.","headline":"themmokhtar","url":"https://themmokhtar.github.io/series.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"Baseband and Android security research blog.","headline":"themmokhtar","url":"https://themmokhtar.com/series.html"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
