--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>themmokhtar</title>
 <meta name="title" content="themmokhtar">
 <meta name="description" content="Baseband and Android security research blog.">
-<meta name="og:url" content="https://themmokhtar.github.io/">
+<meta name="og:url" content="https://themmokhtar.com/">
 <meta name="og:title" content="themmokhtar">
 <meta name="og:description" content="Baseband and Android security research blog.">
 
@@ -40,14 +40,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Baseband and Android security research blog." />
 <meta property="og:description" content="Baseband and Android security research blog." />
-<link rel="canonical" href="https://themmokhtar.github.io/" />
-<meta property="og:url" content="https://themmokhtar.github.io/" />
+<link rel="canonical" href="https://themmokhtar.com/" />
+<meta property="og:url" content="https://themmokhtar.com/" />
 <meta property="og:site_name" content="themmokhtar" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="themmokhtar" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Baseband and Android security research blog.","headline":"themmokhtar","name":"themmokhtar","url":"https://themmokhtar.github.io/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"Baseband and Android security research blog.","headline":"themmokhtar","name":"themmokhtar","url":"https://themmokhtar.com/"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
