--- a/index.html
+++ b/index.html
@@ -46,8 +46,22 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"Technical deep dives into reverse engineering, baseband internals, firmware unpacking, kernel exploitation, and low-level security research — with a focus on modern Android devices.","headline":"themmokhtar","name":"themmokhtar","url":"https://themmokhtar.com/"}</script>
 <!-- End Jekyll SEO tag -->
 
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NHB2BKJF');</script>
+<!-- End Google Tag Manager -->
 </head>
 <body>
+    
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NHB2BKJF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <div class="layout">
 <div class="layout-content">
     <header>
